--- a/css/style.css
+++ b/css/style.css
@@ -1595,6 +1595,7 @@ body._lock {
 
 .author-article__main {
   display: flex;
+  align-items: flex-start;
   padding-bottom: 16px;
   border-bottom: 1px solid rgba(33, 33, 33, 0.3);
   margin-bottom: 16px;
@@ -1603,6 +1604,7 @@ body._lock {
 .author-article__person {
   display: flex;
   align-items: center;
+  margin-right: 56px;
 }
 
 .author-article__image {
@@ -1627,7 +1629,6 @@ body._lock {
 }
 
 .author-article__info {
-  margin-right: 56px;
   display: flex;
   flex-direction: column;
 }
@@ -2341,6 +2342,15 @@ body._lock {
 
   .brands__sidebar {
     max-width: unset;
+  }
+
+  .author-article__main {
+    flex-direction: column;
+  }
+
+  .author-article__person {
+    margin-right: 0;
+    margin-bottom: 16px;
   }
 
   .contact__header {
