--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,11 @@ body._lock {
   font-weight: 700;
 }
 
+.title4 {
+  font-size: 1.25rem;
+  font-weight: 700;
+}
+
 .btn-gradient {
   font-family: "Manrope", sans-serif;
   color: var(--white);
@@ -1913,7 +1918,7 @@ body._lock {
   margin: 0 auto;
 }
 
-.article__title {
+.article__main-title {
   font-size: 2.5rem;
   font-weight: 700;
   margin-bottom: 24px;
@@ -1931,43 +1936,96 @@ body._lock {
   margin-bottom: 56px;
 }
 
-.article__section h2 {
+.article__title {
   font-size: 2.5rem;
   font-weight: 700;
-  margin-bottom: 50px;
+  margin-bottom: 56px;
 }
 
-.article__section h3 {
-  font-size: 1.5rem;
-  font-weight: 700;
-  font-family: "Manrope", sans-serif;
+.article__title3 {
   margin-bottom: 40px;
 }
 
-.article__section h4 {
-  font-size: 1.25rem;
-  font-weight: 700;
-  font-family: "Manrope", sans-serif;
+.article__title4 {
   margin-bottom: 16px;
 }
 
-.article__section p {
+.article__text {
   font-size: 1.125rem;
   font-weight: 500;
   font-family: "Manrope", sans-serif;
   margin-bottom: 40px;
+  line-height: 1.5;
 }
 
-.article__section blockquote {
+.article__list-title {
+  padding-left: 16px;
+  margin-bottom: 16px;
+  font-size: 1.125rem;
+}
+
+.article__list {
+  margin-bottom: 16px;
+  padding-left: 16px;
+}
+
+.article__item {
+  position: relative;
+  font-size: 1.125rem;
+  padding-left: 42px;
+}
+
+.article__item:not(:last-child) {
+  margin-bottom: 8px;
+}
+
+.article__item::before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  left: 0;
+  width: 34px;
+  height: 3px;
+  border-radius: 2px;
+  background: linear-gradient(0deg, #FF8A23 0%, #E7A469 100%);
+}
+
+.article__numeric-list {
+  counter-reset: ol-counter;
+  padding-left: 16px;
+  margin-bottom: 16px;
+}
+
+.article__numeric-item {
   font-size: 0.875rem;
+  opacity: 0.8;
+  position: relative;
+  padding-left: 20px;
+}
+
+.article__numeric-item:not(:last-child) {
+  margin-bottom: 8px;
+}
+
+.article__numeric-item::before {
+  counter-increment: ol-counter;
+  content: counter(ol-counter) ".";
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.article__quote {
   opacity: 0.8;
   margin-bottom: 40px;
   position: relative;
   margin-left: 16px;
   padding-left: 40px;
+  line-height: 1.5;
+  font-size: 1.125rem;
 }
 
-.article__section blockquote::before {
+.article__quote::before {
   content: "";
   position: absolute;
   top: 0;
@@ -1979,7 +2037,7 @@ body._lock {
   background: #000;
 }
 
-.article__section blockquote::after {
+.article__quote::after {
   content: "";
   position: absolute;
   left: 12px;
@@ -1990,7 +2048,7 @@ body._lock {
   background: #DCDCDC;
 }
 
-.article__section span {
+.article__note {
   display: block;
   padding: 16px;
   border-radius: 5px;
@@ -1998,68 +2056,17 @@ body._lock {
   background: rgba(17, 34, 65, 0.05);
   font-weight: 700;
   font-family: "Manrope", sans-serif;
-}
-
-.article__section ol {
-  counter-reset: ol-counter;
-  padding-left: 16px;
-  margin-top: -20px;
-  margin-bottom: 16px;
-}
-
-.article__section ol li {
-  font-size: 0.875rem;
-  opacity: 0.8;
-  position: relative;
-  padding-left: 20px;
-}
-
-.article__section ol li:not(:last-child) {
-  margin-bottom: 8px;
-}
-
-.article__section ol li::before {
-  counter-increment: ol-counter;
-  content: counter(ol-counter) ".";
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.article__section ul {
-  margin-top: -20px;
-  margin-bottom: 16px;
-  padding-left: 16px;
-}
-
-.article__section ul li {
-  position: relative;
+  line-height: 1.5;
   font-size: 1.125rem;
-  padding-left: 42px;
 }
 
-.article__section ul li:not(:last-child) {
-  margin-bottom: 8px;
-}
-
-.article__section ul li::before {
-  content: "";
-  position: absolute;
-  top: 10px;
-  left: 0;
-  width: 34px;
-  height: 3px;
-  border-radius: 2px;
-  background: linear-gradient(0deg, #FF8A23 0%, #E7A469 100%);
-}
-
-.article__section figure {
+.article__image {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.article__section figure picture {
+.article__image picture {
   position: relative;
   width: 100%;
   padding-bottom: 58%;
@@ -2069,8 +2076,8 @@ body._lock {
   background: url("../img/loading.gif") 50% no-repeat;
 }
 
-.article__section figure picture img,
-.article__section figure picture source {
+.article__image picture img,
+.article__image picture source {
   position: absolute;
   top: 0;
   left: 0;
@@ -2080,7 +2087,7 @@ body._lock {
      object-fit: cover;
 }
 
-.article__section figcaption {
+.article__image figcaption {
   font-family: "Manrope", sans-serif;
   font-size: 0.875rem;
   font-weight: 500;
@@ -2112,6 +2119,7 @@ body._lock {
 .menu-article__link {
   font-weight: 500;
   color: var(--black);
+  line-height: 1.5;
 }
 
 .author-article__body {
@@ -2647,6 +2655,10 @@ body._lock {
     font-size: calc(1.25rem + 4 * (100vw - 20rem) / 1600);
   }
 
+  .title4 {
+    font-size: calc(1rem + 4 * (100vw - 20rem) / 1600);
+  }
+
   .btn-more {
     padding: calc(12px + 12 * (100vw - 320px) / 1600) calc(8px + 8 * (100vw - 320px) / 1600);
     font-size: calc(0.75rem + 4 * (100vw - 20rem) / 1600);
@@ -2892,6 +2904,100 @@ body._lock {
 
   .look__similar {
     font-size: calc(1rem + 4 * (100vw - 20rem) / 1600);
+  }
+
+  .article__wrapper {
+    padding: calc(20px + 20 * (100vw - 320px) / 1600) calc(8px + 8 * (100vw - 320px) / 1600);
+  }
+
+  .article__main-title {
+    font-size: calc(1.5rem + 16 * (100vw - 20rem) / 1600);
+    margin-bottom: calc(12px + 12 * (100vw - 320px) / 1600);
+  }
+
+  .article__author {
+    margin-bottom: calc(24px + 32 * (100vw - 320px) / 1600);
+  }
+
+  .article__menu {
+    margin-bottom: calc(24px + 32 * (100vw - 320px) / 1600);
+  }
+
+  .article__section:not(:last-of-type) {
+    margin-bottom: calc(24px + 32 * (100vw - 320px) / 1600);
+  }
+
+  .article__title {
+    font-size: calc(1.625rem + 14 * (100vw - 20rem) / 1600);
+    margin-bottom: calc(24px + 32 * (100vw - 320px) / 1600);
+  }
+
+  .article__title3 {
+    margin-bottom: calc(20px + 20 * (100vw - 320px) / 1600);
+  }
+
+  .article__title4 {
+    margin-bottom: calc(8px + 8 * (100vw - 320px) / 1600);
+  }
+
+  .article__text {
+    font-size: calc(0.875rem + 4 * (100vw - 20rem) / 1600);
+    margin-bottom: calc(20px + 20 * (100vw - 320px) / 1600);
+  }
+
+  .article__list-title {
+    font-size: calc(0.875rem + 4 * (100vw - 20rem) / 1600);
+  }
+
+  .article__item {
+    font-size: calc(0.875rem + 4 * (100vw - 20rem) / 1600);
+    padding-left: calc(28px + 14 * (100vw - 320px) / 1600);
+  }
+
+  .article__item::before {
+    width: calc(20px + 14 * (100vw - 320px) / 1600);
+    height: calc(2px + 1 * (100vw - 320px) / 1600);
+    top: calc(8px + 2 * (100vw - 320px) / 1600);
+  }
+
+  .article__quote {
+    margin-left: calc(8px + 8 * (100vw - 320px) / 1600);
+    padding-left: calc(30px + 10 * (100vw - 320px) / 1600);
+    font-size: calc(0.875rem + 4 * (100vw - 20rem) / 1600);
+  }
+
+  .article__quote::before {
+    width: calc(20px + 4 * (100vw - 320px) / 1600);
+    height: calc(20px + 4 * (100vw - 320px) / 1600);
+  }
+
+  .article__quote::after {
+    left: calc(10px + 2 * (100vw - 320px) / 1600);
+  }
+
+  .article__note {
+    padding: calc(8px + 8 * (100vw - 320px) / 1600);
+    font-size: calc(0.875rem + 4 * (100vw - 20rem) / 1600);
+  }
+
+  .article__image figcaption {
+    font-size: calc(0.75rem + 2 * (100vw - 20rem) / 1600);
+  }
+
+  .menu-article {
+    padding: calc(12px + 12 * (100vw - 320px) / 1600);
+  }
+
+  .menu-article__title {
+    margin-bottom: calc(16px + 16 * (100vw - 320px) / 1600);
+  }
+
+  .menu-article__body {
+    padding-left: calc(16px + 16 * (100vw - 320px) / 1600);
+  }
+
+  .menu-article__link {
+    font-size: calc(0.75rem + 4 * (100vw - 20rem) / 1600);
   }
 
   .contact__form {
@@ -3267,10 +3373,6 @@ body._lock {
     width: -moz-fit-content;
     width: fit-content;
     margin: 8px 0 0 40px;
-  }
-
-  .article__wrapper {
-    padding: 24px 16px;
   }
 
   .policy__body {
